# jb

./: .gitignore  Justfile  README.md  go.mod  go.sum  jb.go  main.py  pyproject.toml
cmd/bash/: log_bash.go  main.go  safe_bash.go
cmd/bmx/: bmx.go
cmd/git/: main.go  safe_git.go
cmd/head/: main.go  safe_head.go
cmd/jb/: jb.go
cmd/python/: main.go  safe_python.go
cmd/safe/: main.go
etc/: gemini.md  stories.md  token-count.md
internal/draft/: tty_open.go
jb/: __init__.py  __main__.py  blue.py  bmx.0.py  bmx.1.py  bmx.2.py  bmx.3.py  bmx.py  jb.py  main.py  zipascii.py
jb/works/: pg000084-N25-Frankenstein.txt.bmx  pg001508-T15-The_Taming_of_the_Shrew.txt.bmx  pg001524-T15-Hamlet.txt.bmx  pg002701-N25-Moby_Dick.txt.bmx  pg016328-P15-Beowulf.txt.bmx
pkg/: lib.go  safe.go
pkg/blue/: blue.go  blue_test.go
pkg/bmx/: bmx.go  bmx_test.go  bmx_zlib.go  bmx_zlib_c.go  bmx_zlib_go.go
pkg/jb/: jb.go  jb_test.go  lib.go
pkg/safe/: bash.go  git.go  head.go  python.go  safe.go
tests/: test_bmx.py  test_jb.py
