[project]
name = "jb"
version = "0.2.0"
description = "Johannes Blues - A view into great litery works"
readme = "README.md"
authors = [
    { name = "Juancarlo Añez", email = "apalala@gmail.com" }
]
license = "MIT"
requires-python = ">=3.14"
dependencies = []

[tool.setuptools]
packages = ["jb"]
include-package-data = true

[tool.setuptools.package-data]
"jb.works" = ["jb/works/*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
